--- a/musician.html
+++ b/musician.html
@@ -8,17 +8,18 @@
     <form>
         <label for="form1_name">Enter the secret musician name</label>
         <input type ="password" id="form1_name" name="form1_name" min=10 max=50 step=2 value="John Lennon"><br>
-    
         <label for="form1_guess">Guess the musician</label>
         <input type ="text" id="form1_guess" name="form1_guess" autofocus> <br>
-    
         <input type="button" onclick="checkGuess()" value="Check the guess">
     </form>
     <p id="result">This text will be replaced with 0 or 1 depending on the guess</p>
+    <div class = "container">
+        <img src="Cricket.png" alt = "Cricket insect image" id = "image" heigth = "100" width = "100" onclick="swapImage()">
+    </div>
     <script> 
         let correct = 0
         let wrong = 0
-        function checkGuess()
+        function checkGuess()   
         {
             name = document.getElementById("form1_name").value
             guess = document.getElementById("form1_guess").value
@@ -36,7 +37,25 @@
                 out.innerHTML = 0
             }
         }
-        </script>
-
+        let useImage = 1
+        function swapImage()
+        {
+            switch(useImage)
+            {
+                case 1:
+                    document.getElementById("image").src="Honeybee.png";
+                    useImage = 2;
+                    break;
+                case 2:
+                    document.getElementById("image").src="Isoptera.png";
+                    useImage = 3;
+                    break;
+                case 3:
+                    document.getElementById("image").src="Cricket.png";
+                    useImage = 1;
+                    break;
+            }
+        }
+    </script>
 </body>
 </html> 
