--- a/discount.html
+++ b/discount.html
@@ -5,11 +5,11 @@
     </head>
 <body>
     <h1>Chandrakanth computes discount</h1>
-    <div>
+    <div class = "container">
         <label for="amount">Enter the base amount</label>
         <input type = "number" id = "amount" name = "amount" value = 20>
     </div>
-    <div>
+    <div class = "container">
         <label for="discount">Enter the discount percentage</label>
         <input type = "number" id = "discount" name = "discount" value = 10>
     </div>
@@ -17,6 +17,25 @@
         Apply discount
     </button>
     <p id="result">This text will be replaced with base values</p>
+    
+    <div class = "container">
+        <form>
+            <div class = "container">
+                <input type="radio" id="times" name="type" value="times" onclick="chooseOp()">
+                <label for="times">*</label></br>
+            </div>
+            <div class = "container">
+                <input type="radio" id="divide" name="type" value="divide" onclick="chooseOp()">
+                <label for="divide">/</label></br> 
+            </div>
+            <div class = "container">
+                <input type="radio" id="exponent" name="type" value="exponent" onclick="chooseOp()">
+                <label for="exponent">**</label></br>   
+            </div>
+          </form>
+          <p id="result1">This text will be replaced with operation results</p>
+    </div>
+
     <script>
         function discount()
         {
@@ -29,6 +48,20 @@
                 result += " ";
             }
             document.getElementById("result").innerHTML="Discounted amounts for base "+baseAmount+" are "+result
+        }
+        function chooseOp()
+        {
+            baseAmount1 = document.getElementById("amount").value
+            baseDiscount1 = document.getElementById("discount").value
+            multiply = document.getElementById("times").checked
+            division = document.getElementById("divide").checked
+            power = document.getElementById("exponent").checked
+            if(multiply)
+                document.getElementById("result1").innerHTML="Amount*Discount="+baseAmount1*baseDiscount1
+            else if(division)
+                document.getElementById("result1").innerHTML="Amount/   Discount="+baseAmount1/baseDiscount1
+            else
+                document.getElementById("result1").innerHTML="Amount**Discount="+baseAmount1**baseDiscount1
         }
     </script>
 </body>
