--- a/musician.html
+++ b/musician.html
@@ -2,6 +2,19 @@
 <html>
 <head>
     <title>Trying out the Javascript</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Musician guess by Chandrakanth Reddy Chinthakuntla</h1>
@@ -19,6 +32,8 @@
     <script> 
         let correct = 0
         let wrong = 0
+        let correct_guess = 0
+        let wrong_guess = 0
         function checkGuess()   
         {
             name = document.getElementById("form1_name").value
@@ -26,15 +41,28 @@
             out = document.getElementById("result")
             if(name === guess)
             {
-                correct = 1
+                correct += 1
+                correct_guess += 1
                 alert("You got it right")
-                out.innerHTML = 1
+                document.getElementById("result").innerHTML="correct guesses are "+correct+"and wrong guesses are"+wrong
             }
             else
             {
-                wrong = 0
+                wrong += 1
+                wrong_guess += 1
                 alert("Wrong Musician")
-                out.innerHTML = 0
+                if(correct_guess == 0 && wrong_guess == 3)
+                {
+                    alert("Sorry, game over!")
+                    correct = 0;
+                    wrong = 0;
+                }
+                else if(correct_guess>0)
+                {
+                    correct_guess = 0;
+                    wrong_guess = 0;
+                }
+                document.getElementById("result").innerHTML="correct guesses are "+correct+" and wrong guesses are "+wrong
             }
         }
         let useImage = 1
