--- a/discount.html
+++ b/discount.html
@@ -2,40 +2,40 @@
 <html>
     <head>
         <title>Looping Computation</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
     </head>
 <body>
     <h1>Chandrakanth computes discount</h1>
-    <div class = "container">
+    <form>
         <label for="amount">Enter the base amount</label>
-        <input type = "number" id = "amount" name = "amount" value = 20>
-    </div>
-    <div class = "container">
+        <input type = "number" id = "amount" name = "amount" value = 20><p></p>
         <label for="discount">Enter the discount percentage</label>
-        <input type = "number" id = "discount" name = "discount" value = 10>
-    </div>
-    <button type = "button" onclick="discount()">
+        <input type = "number" id = "discount" name = "discount" value = 10><p></p>
+    </form>
+    <button type = "button" class="btn btn-warning" onclick="discount()">
         Apply discount
     </button>
     <p id="result">This text will be replaced with base values</p>
     
-    <div class = "container">
-        <form>
-            <div class = "container">
-                <input type="radio" id="times" name="type" value="times" onclick="chooseOp()">
-                <label for="times">*</label></br>
-            </div>
-            <div class = "container">
-                <input type="radio" id="divide" name="type" value="divide" onclick="chooseOp()">
-                <label for="divide">/</label></br> 
-            </div>
-            <div class = "container">
-                <input type="radio" id="exponent" name="type" value="exponent" onclick="chooseOp()">
-                <label for="exponent">**</label></br>   
-            </div>
-          </form>
-          <p id="result1">This text will be replaced with operation results</p>
-    </div>
-
+    <form>
+        <input type="radio" id="times" name="type" value="times" onclick="chooseOp()">
+        <label for="times">*</label></br>
+        <input type="radio" id="divide" name="type" value="divide" onclick="chooseOp()">
+        <label for="divide">/</label></br> 
+        <input type="radio" id="exponent" name="type" value="exponent" onclick="chooseOp()">
+        <label for="exponent">**</label></br>   
+    </form>
+    <p id="result1">This text will be replaced with operation results</p>
     <script>
         function discount()
         {
