--- a/musician.html
+++ b/musician.html
@@ -20,15 +20,13 @@
     <h1>Musician guess by Chandrakanth Reddy Chinthakuntla</h1>
     <form>
         <label for="form1_name">Enter the secret musician name</label>
-        <input type ="password" id="form1_name" name="form1_name" min=10 max=50 step=2 value="John Lennon"><br>
+        <input type ="password" id="form1_name" name="form1_name" min=10 max=50 step=2 value="John Lennon"><br><p></p>
         <label for="form1_guess">Guess the musician</label>
         <input type ="text" id="form1_guess" name="form1_guess" autofocus> <br>
-        <input type="button" onclick="checkGuess()" value="Check the guess">
+        <input type="button" class = "btn btn-info" onclick="checkGuess()" value="Check the guess">
     </form>
     <p id="result">This text will be replaced with 0 or 1 depending on the guess</p>
-    <div class = "container">
         <img src="Cricket.png" alt = "Cricket insect image" id = "image" heigth = "100" width = "100" onclick="swapImage()">
-    </div>
     <script> 
         let correct = 0
         let wrong = 0
