--- a/vacation.html
+++ b/vacation.html
@@ -2,26 +2,31 @@
 <html>
     <head>
         <title>Going to Vacation</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
     </head>
 <body>
     <h1>Chandrakanth selects a Vacation</h1>
     <form>
-        <div class = "container">
-            <input type ="checkbox" id ="byAir" name ="true" value="True">
-            <label for="true">Travel by Air</label>
-        </div>
-        <div class = "container">
-            <input type="checkbox" id="byDomestic" name="true" value="True">
-            <label for="true">Domestic</label>
-        </div>
-        <div class = "container">
-            <input type="checkbox" id="byResort" name="false" value="False">
-            <label for="false">Resort</label>
-        </div>
+        <input type ="checkbox" id ="byAir" name ="true" value="True">
+        <label for="true">Travel by Air</label><br>
+        <input type="checkbox" id="byDomestic" name="true" value="True">
+        <label for="true">Domestic</label><br>
+        <input type="checkbox" id="byResort" name="false" value="False">
+        <label for="false">Resort</label>
     </form>
-    <button type = "button" onclick="selectVacation()">
+    <button type = "button" class ="btn btn-success" onclick="selectVacation()">
         Select a vacation
-    </button>
+    </button><p></p>
     <script>
         var my_Vacation = {};
         function selectVacation()
@@ -58,15 +63,11 @@
         }
     </script>
     <form>
-        <div class="container">
-            <label for="city">Enter a city</label>
-            <input type="text" id="city" name="vacationname" value="city">
-        </div>
-        <div class="container">
-            <label for="price">Enter price</label>
-            <input type="text" id="price" name="vacationprice" value="0">
-        </div>
-        <button type = "button" onclick="updateVacation()">
+        <label for="city">Enter a city</label>
+        <input type="text" id="city" name="vacationname" value="city"><br><p></p>
+        <label for="price">Enter price</label>
+        <input type="text" id="price" name="vacationprice" value="0"><br><p></p>
+        <button type = "button" class = "btn btn-success" onclick="updateVacation()">
             Update the vacation
         </button>
         <p id="result">This text will be replaced with the updated vacation</p>
